created register api, hash, validation

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "author": "Stas Nevmyvaka <nevmyvakastas@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.2",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "mongoose": "^5.10.11"
   },
   "devDependencies": {
